// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`backslash_2028.js 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
1;/*a*///b /*c*/2

=====================================output=====================================
1; /*a*/ //b
/*c*/ 2;

================================================================================
`;

exports[`backslash_2029.js 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
1;/*a*///b /*c*/2

=====================================output=====================================
1; /*a*/ //b
/*c*/ 2;

================================================================================
`;
